# dapr-agent1

./: .env.example  .gitignore  README.md  dapr.yaml  pyproject.toml  secrets.json.example
components/: local-secret-store.yaml  memorystore.yaml  registrystore.yaml
configs/agents/: frodo.yaml  gandalf.yaml  legolas.yaml  sam.yaml
configs/workflows/: fellowship.yaml
src/dapr_agent_1/: __init__.py  app.py  factory.py  loader.py  orchestrator.py  schemas.py  worker.py
